--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".NewsApplication"
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsAppMVVMArchitecture"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.sources.NewsSourceActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.topheadlines.TopHeadlinesActivity"
             android:exported="false" />
