--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.NewsAppMVVMArchitecture"
         tools:targetApi="31">
         <activity
+            android:name=".ui.newslist.NewsListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.selections.LanguageSelectionActivity"
             android:exported="false" />
         <activity
