--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.44"
     implementation 'androidx.browser:browser:1.4.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.8.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
