--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,13 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.0"
+    }
 
     defaultConfig {
         applicationId "com.gunishjain.newsapp"
@@ -40,22 +47,41 @@ android {
 
 dependencies {
 
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.compose.ui:ui'
+    implementation "androidx.compose.ui:ui:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    implementation 'io.coil-kt:coil-compose:2.4.0'
+
+    // ViewModel utilities for Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
+
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.2'
+
+    implementation 'androidx.compose.material3:material3:1.1.2'
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.recyclerview:recyclerview:1.3.1"
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
     implementation 'androidx.browser:browser:1.4.0'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.google.android.material:material:1.8.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
