--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,11 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:5.3.1"
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+    testImplementation 'app.cash.turbine:turbine:0.12.1'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
