--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,10 +68,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.3.1"
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
-
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
@@ -83,6 +81,10 @@ dependencies {
     implementation 'androidx.browser:browser:1.4.0'
     implementation "androidx.cardview:cardview:1.0.0"
 
+    implementation 'androidx.room:room-runtime:2.5.0'
+    implementation 'androidx.room:room-ktx:2.5.0'
+    kapt 'androidx.room:room-compiler:2.5.0'
+    
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.mockito:mockito-core:5.3.1"
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
