--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -85,6 +86,12 @@ dependencies {
 
     implementation 'androidx.paging:paging-runtime-ktx:3.2.1'
     implementation 'androidx.paging:paging-compose:3.2.1'
+
+    implementation 'androidx.room:room-ktx:2.5.0'
+    implementation 'androidx.room:room-paging:2.5.0'
+    kapt "androidx.room:room-compiler:2.5.0"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
