--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,6 @@ android {
 
     buildFeatures {
         viewBinding = true
-    }
-    buildFeatures {
         compose true
     }
 
@@ -31,6 +29,11 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            buildConfigField("String", "API_KEY", "\"<YOUR_API_KEY>\"")
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -88,7 +91,7 @@ dependencies {
     implementation 'androidx.work:work-runtime-ktx:2.9.0'
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    
+
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.mockito:mockito-core:5.3.1"
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
