--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'androidx.paging:paging-common-ktx:3.2.1'
     kapt "com.google.dagger:hilt-compiler:2.44"
 
     implementation 'androidx.browser:browser:1.4.0'
